# web-scraper-sql-dashboard

./: .gitignore  FLUJO_COMPLETO.md  MODULAR_STRUCTURE.md  POSTGRES_SETUP.md  README.md  analysis.ipynb  docker-compose.yml  extract_modules.py  init.sql  load_dynamic_tables.py  load_to_postgres.py  main.py  modularize.py  push_to_github.sh  pyproject.toml  replace_modules.py  scraper_temu.py  scraper_temu.py.backup  sql_frontend.py  test_deduplication.py  test_temu_simple.py
templates/: modules_config.py  sql_query.html  sql_query.html.backup_modular  sql_query_backup.html  sql_query_before_bootstrap.html
templates/modules/: canvas-control.html  columnas.html  conversor.html  editor.html  galeria-graficos.html  galeria-imagenes.html  graficos.html  personalizador.html  resultados.html  scraper.html  tablas.html  vistas.html  visualizador.html
